Correct align-item to align-items and add margin
Fix typo in CSS property and add margin.

--- a/pp.css
+++ b/pp.css
@@ -219,8 +219,7 @@ img{ max-width: 100%; display: block; }
 /* avatar */
 .home-img{ 
     display: flex;
-    align-item:center;
-    justify-content:center;
+    margin-right:100px;
 }
 
 .avatar {
